--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>pokedex</title>
 </head>
 <body>
-    
+    <header>
+        <div class="nav_top">
+            <h1 class="title">POKEDEX</h1>
+        </div>
+    </header>
+    <main class="container">
+        <section class="mid left">ddddddddddddddddddddds</section>
+        <section class="mid right"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
