--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
 </head>
 <body>
     <header>
-        <div class="nav_top">
+        <nav class="nav_top">
             <h1 class="title">POKEDEX</h1>
-        </div>
+        </nav>
+        <aside class="nav_left">
+            <div class="box_left">
+                <h1 class="title_pokedex">Selecione o Pokémon</h1>
+                <img src="img/pokedex_300x229.png" alt="pokedex">
+                <p><a class="link" href="#">001 - Squirtle</a></p>
+                <p><a class="link" href="#">025 - Pikachu</a></p>
+            </div>
+        </aside>
     </header>
-    <main class="container">
-        <section class="mid left">ddddddddddddddddddddds</section>
-        <section class="mid right"></section>
-    </main>
+
+
+
+
+
+
+
+    <main></main>
     <footer></footer>
 </body>
 </html>
