--- a/page_02.html
+++ b/page_02.html
@@ -17,17 +17,17 @@
                 <h1 class="title_pokedex">Selecione o Pokémon</h1>
                 <img src="img/pokedex_300x229.png" alt="pokedex">
                 <p><a class="link" href="index.html">001 - Squirtle</a></p>
-                <p><a class="link" href="page_02.html">002 - Pikachu</a></p>
+                <p><a class="link" href="page_02.html">025 - Pikachu</a></p>
             </div>
         </aside>
     </header>
     
     <main>
         <section class="box_mid">
-            <div class="numero">001</div>
-            <div class="nome">Squirtle</div>  
-            <div class="img_tipo"><img width="400px" src="img/007_squirtle_475x475.png" alt=""></div>
-            <div class="tipo"><img src="img/agua.png" width="25px" alt=""> Água</div>        
+            <div class="numero">002</div>
+            <div class="nome">Pikachu</div>  
+            <div class="img_tipo"><img width="400px" src="img/025_pikachu_475x475.png" alt=""></div>
+            <div class="tipo_2"><img src="img/raio.png" width="25px" alt=""> Elétrico</div>        
         </section>
     </main>
 
