--- a/page_02.html
+++ b/page_02.html
@@ -30,7 +30,7 @@
             <div class="tipo_2"><img src="img/raio.png" width="25px" alt=""> Elétrico</div>        
         </section>
     </main>
-
+<div>teste de commit</div>
 <footer>
     <small>Perdemos uma madrugada de sábado nessa desgraça</small>
 </footer>
