--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <div class="box_left">
                 <h1 class="title_pokedex">Selecione o Pokémon</h1>
                 <img src="img/pokedex_300x229.png" alt="pokedex">
-                <p><a class="link" href="index.html">001 - Squirtle</a></p>
-                <p><a class="link" href="page_02.html">002 - Pikachu</a></p>
+                <p><a class="link" href="index.html">007 - Squirtle</a></p>
+                <p><a class="link" href="page_02.html">025 - Pikachu</a></p>
             </div>
         </aside>
-    </header>
-    
+    </header>    
     <main>
         <section class="box_mid">
-            <div class="numero">001</div>
-            <div class="nome">Squirtle</div>  
+            <div class="title_pokemon">
+                <div class="numero">007</div>
+                <div class="nome">Squirtle</div>
+            </div>  
             <div class="img_tipo"><img width="400px" src="img/007_squirtle_475x475.png" alt=""></div>
             <div class="tipo"><img src="img/agua.png" width="25px" alt=""> Água</div>        
         </section>
     </main>
-
 <footer>
     <small>Perdemos uma madrugada de sábado nessa desgraça</small>
 </footer>
