--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
 <footer>
-    <small>Perdemos uma madrugada de sábado nessa desgraça</small>
+    <small>&copy;Pokémon</small>
 </footer>
 </body>
 </html>
